<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.toucan.api.ems.demo.method.Payment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <include layout="@layout/params_box"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/additional_params"/>

            <EditText
                android:id="@+id/sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sum"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/vat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/vat"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description" />

            <EditText
                android:id="@+id/fullDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formated_samble"
                android:hint="@string/full_description" />

            <EditText
                android:id="@+id/receiptNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/receiptNumber" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number" />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

            <CheckBox
                android:id="@+id/getPayInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/return_payment_info" />

            <CheckBox
                android:id="@+id/fiscalizationFlag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/fiscalization" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pay"
                android:text="@string/card_payment_short" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
