<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.toucan.api.ems.demo.method.ReturnCashPayment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <include layout="@layout/params_box"/>

            <EditText
                android:id="@+id/payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/payment_id"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sum"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reason" />

            <CheckBox
                android:id="@+id/getPayInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/return_payment_info" />

            <CheckBox
                android:id="@+id/fiscalizationFlag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/fiscalization" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pay"
                android:text="@string/return_payment_short" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
